docs: Add comprehensive Week 4 documentation and coach feedback
Week 4 문서화 및 코치 피드백 반영 완료

## 📚 새로 추가된 문서

### Claude용 가이드 (.claude/commands/)
- week4-step7.md: DB 통합 구현 가이드 (1,500줄)
  * JPA Entity 변환, Repository 구현
  * Testcontainers, p6spy 활용법
  * Lombok 주의사항, Fetch 타입 전략
  * PK 선정 전략 (UUID vs Long)

- week4-step8.md: DB 최적화 가이드 (1,600줄)
  * EXPLAIN 분석, 인덱스 설계
  * Percona Toolkit 사용법
  * N+1 문제, 데카르트 곱 해결법
  * 최적화 보고서 작성 템플릿

### 사용자용 가이드 (docs/week4/)
- step7-integration-guide.md: 환경 설정 가이드 (800줄)
  * MySQL 환경 구성, Entity 변환
  * 통합 테스트 작성, FAQ

- step7-implementation-examples.md: 코드 예시 (900줄)
  * Repository 실제 구현 예시
  * 트랜잭션 처리, Outbox 패턴
  * 통합 테스트, 동시성 테스트

- step8-optimization-report-template.md: 최적화 보고서 템플릿 (600줄)
  * 문제 정의 → 원인 분석 → 해결 방안 → 결과
  * 인기 상품 조회 최적화 실전 예시

### Week 3 문서 (기존 컨텐츠 재구성)
- architecture.md: 레이어드 아키텍처, Best Practices (806줄)
- concurrency.md: 동시성 제어 패턴 비교 (1,037줄)
- testing.md: 테스트 전략 및 품질 (1,446줄)

## 🎯 Week 4 코치 피드백 반영

### Repository 패턴 개선
- findByIdOrThrow() default method 패턴 추가
- 중복 코드 100+ 줄 제거 효과

### 검증 레이어 분리
- Controller: 형식 검증 (@Valid)
- UseCase: 비즈니스 검증
- Entity: 도메인 규칙 검증

### 동시성 제어 비교
- synchronized vs ReentrantLock vs CAS 상세 분석
- Fairness, Timeout, Condition Variable 설명
- 성능 비교 (AtomicInteger 3배 빠름)

### 테스트 품질 개선
- 의미있는 검증 (assertNotNull() 지양)
- Edge Case 커버리지
- 비즈니스 규칙 검증 강화
- Test Isolation 전략 (Superclass 패턴)

## 📝 CLAUDE.md 개선

### 변경 사항
- 754줄 → 267줄 (64.6% 감소)
- Week 2-3 상세 내용 제거
- 참조 중심으로 재구성

### 새로운 섹션
- Documentation Structure 추가
- How to Use This Guide 추가
- 문서 참조 테이블 추가

## 🛠️ 코드 개선

### Repository Interface
- findByIdOrThrow() default method 추가
- 모든 Repository에 적용 (일관성)

### Service Layer
- findByIdOrThrow() 활용으로 중복 코드 제거
- 에러 처리 일관성 개선

## 📊 통계

- 총 추가된 문서: 11개
- 총 문서량: 약 8,500줄
- Claude용 문서: 5,600줄
- 사용자용 문서: 2,900줄

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>